<resources>
    <string name="app_name">Get Mark</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Вход</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="login_button">Войти</string>
    <string name="signup_button">Зарегистрироваться</string>
    <string name="login_form_fragment">Форма входа</string>
    <string name="todo">TODO</string>
    <string name="addRoom">Добавить комнату</string>
    <string name="buttonAddRoom">Присоединиться</string>
    <string name="codeRoom">Код комнаты</string>
    <string name="wrongRoomCode">Неверный код комнаты</string>
    <string name="addRoomLabel">Добавить комнату</string>
    <string name="AppLabel">Rate et Rate</string>
    <string name="registration">Регистрация</string>
    <string name="phone">Номер телефона</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="patronymic">Отчество</string>
    <string name="subject">Направление</string>
    <string name="registration_fragment_label">Регистрация</string>
    <string name="repeatPassword">Повторите пароль</string>
    <string name="shortPassword">Короткий пароль. Минимум 8 символов</string>
    <string name="diffPassword">Пароли не совпадают</string>
    <string name="fillFields">Заполните все обязательные поля</string>
    <string name="my_rooms">Мои комнаты</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Профиль</string>
    <string name="hello_another_blank_fragment">another blank fragment</string>
    <string name="no_rooms">У вас еще нет ни одной комнаты :(</string>
    <string name="Profile">Профиль</string>
    <string name="my_profile">Мой профиль</string>
    <string name="nameLabel">ФИО</string>
    <string name="notFound">нет данных :(</string>
    <string name="emailLabel">Электронная почта</string>
    <string name="proneNumberLabel">Номер телефона</string>
    <string name="studyLabel">Учебное заведение</string>
    <string name="socialNetworkLabel">Социальная сеть</string>
    <string name="studyGroupLabel">Учебная группа</string>
    <string name="updateProfile">Изменить профиль</string>
    <string name="student">СТУДЕНТ</string>
    <string name="teacher">ПРЕПОДАВАТЕЛЬ</string>
    <string name="room_title_example">Создание сайта по оценке обучающихся</string>
    <string name="members_count">Количество участников</string>
    <string name="teachers">Преподаватели</string>
    <string name="students">Студенты</string>
    <string name="defaultName">Иванов Иван Иванович</string>
    <string name="roomMemebers">Участники комнаты</string>
    <string name="room_description_example">Проект по созданию сайта, на котором студенты смогут оценивать работы друг друга</string>
    <string name="current_tasks">Текущие задания</string>
    <string name="members">Участники</string>
    <string name="completed_tasks">Выполненные задания</string>
    <string name="evaluated_works">Оценить работу</string>
    <string name="no_tasks">У вас еще нет ни одного задания :(</string>
    <string name="no_completed_tasks">У вас еще нет ни одного выполненного задания :(</string>
    <string name="room_return">Вернуться к комнате</string>
    <string name="task_title_example">Создание вайфреймов приложения</string>
    <string name="task_expiration_text">Срок истекает</string>
    <string name="task_expiration_date_example">12.02.2022</string>
    <string name="task_description_example">Проект по созданию сайта, на котором студенты смогут оценивать работы друг друга</string>
    <string name="upload_work">Загрузить работу</string>
    <string name="uploaded_work_example">проект_по_созданию…</string>
    <string name="change">Изменить</string>
    <string name="roomMembers">Участники комнаты</string>
    <string name="roomTemplate">Создание сайта по оценке обучающихся</string>
    <string name="saveProfile">Сохранить</string>
    <string name="updateEmail">Изменить почту</string>
    <string name="updatePassword">Обновить пароль</string>
    <string name="my_email">Моя почта</string>
    <string name="oldPasswordLabel">Старый пароль</string>
    <string name="newPasswordLabel">Новый пароль</string>
    <string name="my_password">Мой пароль</string>
    <string name="instituteLabel">Институт</string>
    <string name="universityLabel">Университет</string>
    <string name="logout">Выйти</string>
    <string name="download_project">Скачать работу</string>
    <string name="not_found_project">Не удалось найти работы для оценивания :(</string>
    <string name="mark_project">Оценить</string>
    <string name="comment">Комментарий</string>
    <string name="myProject">Моя работа</string>
    <string name="projectTitleHint">Название работы</string>
    <string name="projectDescriptionHint">Описание работы</string>
    <string name="editMyProject">Изменить работу</string>
    <string name="saveMyProject">Сохранить работу</string>
    <string name="uploadFile">Загрузить файл</string>
    <string name="filename">file.pdf</string>
    <string name="updateMyProject">Изменить работу</string>
    <string name="EduInstitution">Учебное заведение</string>
</resources>