<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rooms_graph"
    app:startDestination="@+id/navigation_my_rooms">

    <fragment
        android:id="@+id/navigation_add_room"
        android:name="ru.urfu.mutualmarker.ui.AddRoomFragment"
        android:label="@string/addRoomLabel"
        tools:layout="@layout/fragment_add_room" />

    <fragment
        android:id="@+id/navigation_my_rooms"
        android:name="ru.urfu.mutualmarker.ui.MyRoomsFragment"
        android:label="@string/my_rooms"
        tools:layout="@layout/fragment_my_rooms" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="ru.urfu.mutualmarker.ui.MyProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_my_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_csdvfv"
            app:destination="@id/csdvfv" />
    </fragment>

    <fragment
        android:id="@+id/csdvfv"
        android:name="ru.urfu.mutualmarker.fragments.RoomMembersFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_room_members" >
    </fragment>

</navigation>