<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_background"
    android:orientation="vertical"
    tools:context=".fragments.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/RegistrationText"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:layout_marginVertical="50dp"
            android:fontFamily="@font/gilroy_black"
            android:text="@string/registration"
            android:textColor="@color/black"
            android:textSize="@dimen/login_size"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.9" />

        <View
            android:id="@+id/PurpleLine"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:background="@color/purple_main"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/RegistrationText"
            app:layout_constraintWidth_percent="0.9" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EmailField"
            style="@style/InputField"
            android:layout_width="301dp"
            android:layout_height="48dp"
            android:layout_marginVertical="54dp"
            android:layout_marginTop="44dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/PurpleLine" />


        <TextView
            android:id="@+id/ShortPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"

            android:text="@string/shortPassword"
            android:textColor="@color/red"
            android:textSize="10sp"
            android:visibility="gone"

            app:layout_constraintBottom_toTopOf="@id/PasswordField"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/EmailField"
            tools:ignore="SmallSp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PasswordField"
            style="@style/InputField"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginVertical="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/EmailField"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/purple_main" />

        <TextView
            android:id="@+id/DiffPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"

            android:text="@string/diffPassword"
            android:textColor="@color/red"
            android:textSize="10sp"
            android:visibility="gone"

            app:layout_constraintBottom_toTopOf="@id/RepeatPasswordField"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/PasswordField"
            tools:ignore="SmallSp" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/RepeatPasswordField"
            style="@style/InputField"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginVertical="20dp"
            android:hint="@string/repeatPassword"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/PasswordField"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/purple_main" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PhoneField"
            style="@style/InputField"
            android:layout_width="305dp"
            android:layout_height="48dp"
            android:layout_marginVertical="20dp"
            android:hint="@string/phone"
            android:inputType="numberPassword"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RepeatPasswordField" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/FirstNameField"
            style="@style/InputField"
            android:layout_width="303dp"
            android:layout_height="48dp"
            android:layout_marginVertical="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/first_name"
            android:inputType="text"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PhoneField" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LastNameField"
            style="@style/InputField"
            android:layout_width="303dp"
            android:layout_height="48dp"
            android:layout_marginVertical="20dp"
            android:hint="@string/last_name"
            android:inputType="text"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FirstNameField" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PatronymicField"
            style="@style/InputField"
            android:layout_width="303dp"
            android:layout_height="48dp"
            android:layout_marginVertical="20dp"
            android:layout_marginTop="16dp"
            android:hint="@string/patronymic"
            android:inputType="text"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LastNameField" />

        <TextView
            android:id="@+id/FillFields"
            android:layout_width="300dp"
            android:layout_height="wrap_content"

            android:text="@string/fillFields"
            android:textColor="@color/red"
            android:textSize="10sp"
            android:visibility="gone"

            app:layout_constraintBottom_toTopOf="@id/RegistrationButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/PatronymicField"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/RegistrationButton"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/gilroy_black"
            android:text="@string/signup_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/login_form_size"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PatronymicField"
            tools:layout_editor_absoluteX="70dp"
            tools:layout_editor_absoluteY="496dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>