<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/purple_background"
        tools:context=".fragments.LoginForm"
        android:orientation="vertical">

    <View
            android:id="@+id/WhiteLine"
            android:layout_width="match_parent"
            android:layout_height="@dimen/white_line"
            android:background="@color/white"
            app:flow_verticalAlign="bottom"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <TextView
            android:id="@+id/LoginText"
            android:layout_width="301dp"
            android:layout_height="29dp"
            android:text="@string/registration"
            android:fontFamily="@font/gilroy_black"
            android:textSize="@dimen/login_size"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginVertical="30dp"
            android:layout_marginHorizontal="54dp"
            app:layout_constraintTop_toBottomOf="@id/WhiteLine"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="28dp" />

    <View
            android:id="@+id/PurpleLine"
            android:layout_width="300dp"
            android:layout_height="3dp"
            android:background="@color/purple_main"
            app:layout_constraintTop_toBottomOf="@id/LoginText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EmailField"
            style="@style/InputField"
            android:layout_width="301dp"
            android:layout_height="48dp"
            android:layout_marginVertical="54dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/PurpleLine"
            android:layout_marginTop="44dp" />

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PhoneField"
            style="@style/InputField"
            android:layout_width="305dp"
            android:layout_height="48dp"
            android:layout_marginVertical="20dp"
            android:hint="@string/phone"
            android:inputType="numberPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PasswordField"
            app:layout_constraintHorizontal_bias="0.5" />

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/FirstNameField"
            style="@style/InputField"
            android:layout_width="303dp"
            android:layout_height="48dp"
            android:layout_marginVertical="20dp"
            android:hint="@string/first_name"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PhoneField"
            app:layout_constraintHorizontal_bias="0.504"
            android:layout_marginTop="20dp" />

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LastNameField"
            style="@style/InputField"
            android:layout_width="303dp"
            android:layout_height="48dp"
            android:layout_marginVertical="20dp"
            android:hint="@string/last_name"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FirstNameField"
            app:layout_constraintHorizontal_bias="0.504" />

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patronymicField"
            style="@style/InputField"
            android:layout_width="303dp"
            android:layout_height="48dp"
            android:layout_marginVertical="20dp"
            android:hint="@string/patronymic"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LastNameField"
            app:layout_constraintHorizontal_bias="0.509"
            android:layout_marginTop="16dp" />

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PasswordField"
            android:layout_width="303dp"
            android:layout_height="48dp"
            android:hint="@string/password"
            style="@style/InputField"
            android:layout_marginVertical="20dp"
            app:layout_constraintTop_toBottomOf="@id/EmailField"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    <Button
            android:id="@+id/RegistrationButton"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:text="@string/signup_button"
            android:fontFamily="@font/gilroy_black"
            android:textSize="@dimen/login_form_size"
            app:layout_constraintTop_toBottomOf="@+id/patronymicField"
            tools:layout_editor_absoluteX="70dp"
            android:layout_marginTop="60dp" />
            android:background="@color/transparent"
            android:textColor="@color/purple_main"
            android:textAllCaps="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="496dp"
            app:layout_constraintHorizontal_bias="0.496" />
</androidx.constraintlayout.widget.ConstraintLayout>