<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddRoomFragment">



    <TextView
        android:id="@+id/AddRoom"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.9"
        android:layout_height="30dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="50dp"
        android:fontFamily="@font/gilroy_black"
        android:text="@string/addRoom"
        android:textColor="@color/black"
        android:textSize="@dimen/login_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/PurpleLine"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.9"
        android:layout_height="3dp"
        android:background="@color/purple_main"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AddRoom" />

    <TextView
        android:id="@+id/WrongRoomCode"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="200dp"
        android:text="@string/wrongRoomCode"
        android:textColor="@color/red"
        android:textSize="10sp"
        android:visibility="invisible"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PurpleLine"
        tools:ignore="SmallSp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/RoomCode"
        style="@style/InputField"
        android:layout_width="300dp"
        android:layout_height="50dp"

        android:hint="@string/codeRoom"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/WrongRoomCode"
         />

    <Button
        android:id="@+id/AddRoomButton"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginVertical="50dp"
        android:fontFamily="@font/gilroy_black"

        android:text="@string/buttonAddRoom"
        android:textAllCaps="false"
        android:textSize="@dimen/login_form_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RoomCode" />


</androidx.constraintlayout.widget.ConstraintLayout>