<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_background"
    android:orientation="vertical"
    tools:context=".fragments.LoginFragment">


    <TextView
        android:id="@+id/LoginText"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.9"
        android:layout_height="30dp"
        android:layout_marginVertical="50dp"
        android:fontFamily="@font/gilroy_black"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/login_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/PurpleLine"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.9"
        android:layout_height="3dp"
        android:background="@color/purple_main"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LoginText"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/EmailField"
        style="@style/InputField"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginVertical="54dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PurpleLine" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/PasswordField"
        style="@style/InputField"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginVertical="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EmailField"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/purple_main" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_margin"
        app:layout_constraintWidth_percent="0.7"
        android:layout_marginVertical="286dp"
        android:fontFamily="@font/gilroy_black"
        android:text="@string/login_button"
        android:textAllCaps="false"
        android:textSize="@dimen/login_form_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PasswordField" />

    <Button
        android:id="@+id/SignupButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_margin"
        app:layout_constraintWidth_percent="0.7"
        android:background="@color/transparent"
        android:fontFamily="@font/gilroy_black"
        android:text="@string/signup_button"
        android:textAllCaps="false"
        android:textColor="@color/purple_main"
        android:textSize="@dimen/login_form_size"
        android:theme="@style/InactiveButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LoginButton" />
</androidx.constraintlayout.widget.ConstraintLayout>